Fix vertical spacing between features

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,7 +1,6 @@
 #dashboardContainer{
   width: 98%;
   margin-left: 1%;
-  height: 100%;
 }
 
 .dashboardContainer{
